# RouteBrain

./: .env.example  Dockerfile  README.md  inference.py  pyproject.toml  requirements.txt
app/: __init__.py  env.py  grader.py  main.py  reward.py  schemas.py  simulator.py  tasks.py  utils.py
app/web/: index.html
configs/: __init__.py  openenv.yaml  settings.py
data/: task_easy.json  task_hard.json  task_medium.json
scripts/: push_to_hf_space.ps1
server/: app.py
